feat: filtering pokemons

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -6,14 +6,14 @@
     .navbar-brand {
       font-size: 2rem;
     }
-    .search-input {
+    .searchInput {
       .form-control {
         padding: 1.5em 0.75em;
         &:focus {
           box-shadow: none;
         }
       }
-      .search-icon {
+      .searchIcon {
         border: none;
         background: white;
       }
