--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -12,6 +12,9 @@
   --color-success: #4caf50;
   --color-danger: #f44336;
 
+  --color-background: #f4f4f4;
+  --color-dark-background: #3b3d4d;
+
   --color-primary: #f44336;
   --color-primary-dark: #c62828;
   --color-light: #fafafa;
