--- a/src/components/FilterRow/FilterRow.scss
+++ b/src/components/FilterRow/FilterRow.scss
@@ -1,13 +1,69 @@
-@import './src/scss/variables.scss';
-.colorPalette{
+@import "./src/scss/variables.scss";
+.filterRow {
   font-size: 1rem;
-  .sectionTitle{
-    margin-bottom: 1em;
+  .col-md-4 {
+    @include media-xxl {
+      flex: 0 0 25%;
+      max-width: 25%;
+    }
   }
-  .colors{
-    display: grid;
-    grid-template-rows: repeat(3, minmax(60px, 1fr));
-    grid-template-columns: repeat(5, 1fr);
-    grid-row-gap: 2em;
+  .typeBtn{
+    .dropdown-menu{
+      max-height: 50vh;
+      overflow: auto;
+    }
   }
+  // .sortBtn {
+    // box-shadow: 0 0 0 0.2rem rgba(216,217,219,.5);
+    button.dropdown-toggle {
+      position: relative;
+      background: white;
+      width: 100%;
+      border: solid 1px rgba(0, 0, 0, 0.15);
+      text-align: left;
+      &:focus {
+        box-shadow: none;
+      }
+      &:after {
+        right: 0.3em;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+    }
+    .dropdown-menu {
+      width: 100%;
+      margin: 0;
+      padding: 0;
+      .dropdown-item {
+        color: var(--color-secondary-text);
+        padding-top: 0.75em;
+        padding-bottom: 0.75em;
+        &:not(:last-of-type) {
+          border-bottom: solid 1px var(--color-background);
+        }
+        &.active {
+          color: var(--color-text);
+          background: var(--color-background);
+        }
+        &:active {
+          background: var(--color-background);
+        }
+      }
+    }
+    &.show {
+      .dropdown-toggle {
+        border-bottom: transparent;
+        border-bottom-right-radius: 0;
+        border-bottom-left-radius: 0;
+      }
+      .dropdown-menu {
+        border-top: transparent;
+        border-top-right-radius: 0;
+        border-top-left-radius: 0;
+        border-bottom-right-radius: 0.3rem;
+        border-bottom-left-radius: 0.3rem;
+      }
+    }
+  // }
 }
