feat: xs media, search bar

--- a/src/components/Pokedex/Pokedex.scss
+++ b/src/components/Pokedex/Pokedex.scss
@@ -5,8 +5,11 @@
   .wrapper{
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
+    @include media-xs{
+      justify-content: center;
+    }
 
     .pokeCard{
       background: white;
