--- a/src/components/FilterRow/FilterRow.scss
+++ b/src/components/FilterRow/FilterRow.scss
@@ -7,6 +7,12 @@
       max-width: 25%;
     }
   }
+  
+  @include media-xs{
+    .col-12{
+      margin: 0.25em 0;
+    }
+  }
   .typeBtn{
     .dropdown-menu{
       max-height: 50vh;
