--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -15,7 +15,7 @@
   --color-background: #f4f4f4;
   --color-dark-background: #3b3d4d;
 
-  --color-primary: #f44336;
+  --color-primary: #369bf8;
   --color-primary-dark: #c62828;
   --color-light: #fafafa;
   --color-dark: #212121;
