--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -5,6 +5,10 @@
     padding: 0.65rem;
     .navbar-brand {
       font-size: 2rem;
+      a{
+        color: var(--color-light);
+        text-decoration: none;
+      }
     }
     .searchInput {
       .form-control {
