--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,34 @@
 @import './src/scss/variables.scss';
+
+//* CSS Custom Properties *\\
+:root {
+  --top-header-height: 92px;
+  --fixed-header-height: 52px;
+  --header-height: calc(var(--top-header-height) + var(--fixed-header-height));
+  --footer-height: 55px;
+  --html-font-size-xlg: 14px;
+  --html-font-size-lg: 14px;
+  --html-font-size-md: 12px;
+  --html-font-size-sm: 12px;
+
+  --color-success: #4caf50;
+  --color-danger: #f44336;
+
+  --color-background: #f4f4f4;
+  --color-dark-background: #3b3d4d;
+
+  --color-primary: #369bf8;
+  --color-primary-dark: #c62828;
+  --color-light: #fafafa;
+  --color-dark: #212121;
+  --color-dark-rgb: 23, 23, 23;
+  --color-darkest: #111111;
+  --color-shadow-t: rgba(7, 7, 7, 0.65);
+
+  --color-text: --color-dark;
+  --color-secondary-text: #bcb5b9;
+}
+
 body {
   margin: 0;
   padding: 0;
