fix: responsive stuff

--- a/src/scenes/PokedexDetail/PokedexDetail.scss
+++ b/src/scenes/PokedexDetail/PokedexDetail.scss
@@ -6,5 +6,11 @@
     @include media-xs{
       margin-bottom: 3em;
     }
+    @include media-sm{
+      margin-bottom: 3em;
+    }
+    @include media-lg{
+      margin-bottom: initial;
+    }
   }
 }
