--- a/src/components/Pokedex/Pokemon/PokemonCard.scss
+++ b/src/components/Pokedex/Pokemon/PokemonCard.scss
@@ -6,23 +6,27 @@
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
   border-radius: 0.25em;
 
-  margin: 1em;
+  margin: 1em 0;
+
+  &.noMargin{
+    margin: 0;
+  }
 
   @include media-xs{
     flex: 0 0 100%;
   }
 
   @include media-sm{
-    flex: 0 0 calc(50% - 2em);
+    flex: 0 0 calc(47%);
   }
   @include media-lg{
-    flex: 0 0 calc(33.333333% - 3em);
+    flex: 0 0 calc(30%);
   }
   @include media-xl{
-    flex: 0 0 calc(25% - 4em);
+    flex: 0 0 calc(23%);
   }
   @include media-xxl{
-    flex: 0 0 calc(20% - 5em);
+    flex: 0 0 calc(18%);
   }
 
   .container-fluid{
