feat: adds loading indicator, fixes flex layout

--- a/src/components/Pokedex/Pokedex.scss
+++ b/src/components/Pokedex/Pokedex.scss
@@ -5,7 +5,7 @@
   .wrapper{
     display: flex;
     flex-wrap: wrap;
-    align-items: flex-start;
+    align-items: stretch;
     justify-content: space-between;
     @include media-xs{
       justify-content: center;
