--- a/src/components/Pokedex/Pokemon/PokemonCard.scss
+++ b/src/components/Pokedex/Pokemon/PokemonCard.scss
@@ -8,6 +8,10 @@
 
   margin: 1em 0;
 
+  display: flex;
+  flex-direction: column;
+
+
   &.noMargin{
     margin: 0;
   }
@@ -29,13 +33,11 @@
     flex: 0 0 calc(18%);
   }
 
-  .container-fluid{
-    padding: 0;
-    margin: 0;
-  }
-
   .info{
     padding: 2em;
+    flex: 1 0 0;
+    display: flex;
+    align-items: center;
 
     img{
       height: 48px;
