--- a/src/components/PokemonInfoTabs/PokemonInfoTabs.scss
+++ b/src/components/PokemonInfoTabs/PokemonInfoTabs.scss
@@ -10,6 +10,9 @@
       border-right: solid 1px #e2e2e4;
       transition: 0.15s all ease;
       padding: 1.25em;
+      &:last-of-type{
+        flex: 2 0 0;
+      }
       &.active{
         font-weight: 700;
         box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2);
